--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation project(':rxblelib')
+//    implementation 'com.github.JoeSteven:RxBle:1.0'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+//    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 }
